force-app/main/default/objects/Agenda__c/Agenda__c.object-meta.xml
<CustomObject>
    <description>A list of subjects to be discussed.</description>
    <label>Agenda</label>
    <nameField>
        <label>Agenda Item</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Agenda</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>