force-app/main/default/objects/Agenda__c/fields/CreatedFromAgendaId__c.field-meta.xml
<CustomField>
    <fullName>CreatedFromAgendaId__c</fullName>
    <description>Used to save the Id from the original (template) agenda record.</description>
    <label>Agenda Template</label>
    <length>50</length>
    <type>Text</type>
</CustomField>