force-app/main/default/objects/Agenda__c/fields/KeyWords__c.field-meta.xml
<CustomField>
    <fullName>KeyWords__c</fullName>
    <description>Important words separated by semi-colon.</description>
    <inlineHelpText>Important words separated by semi-colon.</inlineHelpText>
    <label>Key-Words</label>
    <length>255</length>
    <type>Text</type>
</CustomField>