force-app/main/default/objects/Agenda__c/fields/KInId__c.field-meta.xml
<CustomField>
    <fullName>KInId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Input Knowledge</label>
    <referenceTo>Kb__c</referenceTo>
    <relationshipLabel>Input Kb for Agenda</relationshipLabel>
    <relationshipName>kInAgenda</relationshipName>
    <type>Lookup</type>
</CustomField>