force-app/main/default/objects/Agenda__c/fields/SubjectId__c.field-meta.xml
<CustomField>
    <fullName>SubjectId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Subject</label>
    <referenceTo>Subject__c</referenceTo>
    <relationshipLabel>Agenda Subject</relationshipLabel>
    <relationshipName>SubjectOfAgenda</relationshipName>
    <type>Lookup</type>
</CustomField>