force-app/main/default/objects/Agenda__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>MeetingId__c</columns>
    <columns>SubjectDescription__c</columns>
    <columns>KInId__c</columns>
    <columns>KeyWords__c</columns>
    <columns>IsTemplate__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>